Création du service de la DB

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="script.js" type="module" defer></script>
+    <script src="index.js" type="module" defer></script>
   </head>
   <body>
     <button id="toggleForm">+</button>
